Target SDK 36
Local determination of country names